--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "server.js",
   "dependencies": {
     "angular-ui-router": "^0.3.1",
+    "angular-youtube-embed": "^1.3.0",
     "body-parser": "~1.4.2",
     "express": "~4.5.1",
     "method-override": "~2.0.2",
